--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/passport-jwt": "^4.0.1",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "grpc-nest-proto": "github:NikkyXO/grpc-nest-proto",
     "mongodb": "^5.9.2",
